fix contrast error

--- a/index.css
+++ b/index.css
@@ -205,7 +205,7 @@ footer p {
 
 .sortbtn {
     background-color: #ffffff;
-    color: #72a2c4;
+    color: #3f79a3;
     font-weight: bold;
     padding: 5px 2em 5px 2em;
     margin-top: 10px;
@@ -327,7 +327,7 @@ footer p {
 .buy-items button {
 	background-color: #eb5f5f;
 	font-weight: bold;
-	color: rgb(50, 50, 50);
+	color: rgb(20, 20, 20);
     border: 1px solid #fa3030;
     border-radius: 6px;
 	padding: 7px 6px;
